Fixed problem about align canvas width < 500px

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ body {
 
 .canvas-area {
   margin: 10px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .palette {
